feat: upgrade spring to 3.4.1 and java to 21
- remove dependencies related to elasticsearch
- delete code implemented using elasticsearch
- eliminate static keyword in entity initialization
- migrate from javax to jakarta
- fix minor problematic code issues
- apply code formatting