@@ -1,5 +1,12 @@
 package wooteco.prolog.fixtures;
 
+import wooteco.prolog.studylog.application.dto.StudylogRequest;
+import wooteco.prolog.studylog.application.dto.TagRequest;
+
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+
 import static java.util.stream.Collectors.toList;
 import static wooteco.prolog.fixtures.TagAcceptanceFixture.TAG1;
 import static wooteco.prolog.fixtures.TagAcceptanceFixture.TAG2;
@@ -7,12 +14,6 @@ import static wooteco.prolog.fixtures.TagAcceptanceFixture.TAG3;
 import static wooteco.prolog.fixtures.TagAcceptanceFixture.TAG4;
 import static wooteco.prolog.fixtures.TagAcceptanceFixture.TAG5;
 import static wooteco.prolog.fixtures.TagAcceptanceFixture.TAG6;
-
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import wooteco.prolog.studylog.application.dto.StudylogRequest;
-import wooteco.prolog.studylog.application.dto.TagRequest;
 
 public enum StudylogAcceptanceFixture {
     STUDYLOG1(
@@ -99,7 +100,7 @@ public enum StudylogAcceptanceFixture {
         "진짜 어려움",
         1L,
         1L,
-        Arrays.asList(4L)
+        List.of(4L)
     );
 
     private final StudylogRequest studylogRequest;
